# xd-renderer

./: CMakeLists.txt  main.cpp
2D/: Circle.cpp  Circle.h  Entity2D.cpp  Entity2D.h  Line.cpp  Line.h  Space2D.cpp  Space2D.h  Vector2D.cpp  Vector2D.h
3D/: Space3D.cpp  Space3D.h  Vector3D.cpp  Vector3D.h
